WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271720
REGRESSION(
276494@main
): Caused a hang exiting fullscreen (<
rdar://125368853
>)
https://bugs.webkit.org/show_bug.cgi?id=271720
Summary
REGRESSION(276494@main): Caused a hang exiting fullscreen (<rdar://125368853>)
WebKit Commit Bot
Reported
2024-03-26 12:47:40 PDT
https://commits.webkit.org/276494@main
introduced a regression: Caused a hang exiting fullscreen (<
rdar://125368853
>) This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of 276494@main
(5.87 KB, patch)
2024-03-26 12:47 PDT
,
WebKit Commit Bot
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2024-03-26 12:47:46 PDT
Created
attachment 470611
[details]
REVERT of
276494@main
Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2
2024-03-26 12:52:55 PDT
Committed
276706@main
(098ae9d831aa): <
https://commits.webkit.org/276706@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470611
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-03-26 12:53:19 PDT
<
rdar://problem/125434645
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug