Cherry-pick 098ae9d831aa. rdar://125368853

Unreviewed, reverting 276494@main.
    https://bugs.webkit.org/show_bug.cgi?id=271720

    Caused a hang exiting fullscreen (<rdar://125368853>)

    Reverted changeset:

    "REGRESSION (UI-side compositing?): Sporadic failures in layout tests due to wrong test images"
    https://bugs.webkit.org/show_bug.cgi?id=271348
    https://commits.webkit.org/276494@main

    Canonical link: https://commits.webkit.org/276706@main